--- a/emps-ui/index.html
+++ b/emps-ui/index.html
@@ -42,7 +42,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Find Location Data by Coordinates</h1>
+        <h1>Find Weather Data</h1>
 
 
         <button onclick="getLocation()">Find</button>
